--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-dekalb-county-dF1Fg0-10r6AtnaKjNoogA'>PRN Speech Language Pathologist - (Dekalb County) #1203 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/childserve/job/oZ1fbfwa'>ChildServe Careers - Speech Language Pathologist - Full Time</a></h5> 
 <p><span class="badge badge-light">Johnston, Iowa</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -110,11 +114,11 @@
 <p><span class="badge badge-light">Mount Airy, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cortica/jobs/4498853002'>Job Application for Clinical Director of Speech Therapy at Cortica</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cortica/jobs/4498853002'>Job Application for Clinical Director of Speech Therapy at Cortica</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
+<h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
 <p><span class="badge badge-light">Rockford Rockford</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -162,7 +166,7 @@
 <p><span class="badge badge-light">Stratford, CT</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698100916-speech-language-pathologists'>Hearing and Speech Center of Florida Speech Language Pathologists | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698100916-speech-language-pathologists'>Hearing and Speech Center of Florida Speech Language Pathologists | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FLUnited States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -242,7 +246,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p>1 day ago ... Title: Speech-Language Pathologist Clinical Fellowship. ID: 7048-GAD. Location: 
 Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://centersforcare.applytojob.com/apply/TXzeZBRKjd/Speech-Language-Pathologist-SLP'>Speech Language Pathologist  (SLP) - Centers Health Care - Career Page</a></h5> 
+<h5><a href='http://centersforcare.applytojob.com/apply/TXzeZBRKjd/Speech-Language-Pathologist-SLP'>Speech Language Pathologist  (SLP) - Centers Health Care - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -270,7 +274,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999681998021-speech-language-pathology-assistant-outreach-coordinator'>Hearing and Speech Center of Florida Speech-Language Pathology Assistant-OUTREACH COORDINATOR | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999681998021-speech-language-pathology-assistant-outreach-coordinator'>Hearing and Speech Center of Florida Speech-Language Pathology Assistant-OUTREACH COORDINATOR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -301,7 +305,7 @@ physician practices, and services. Expanding across Virginia, West Virginia, and
 <p>3 days ago ... Speech Language Pathologist - Speech Therapist - SLP - ST JOB SUMMARY: A 
 Speech Language Pathologist (SLP) administers speech therapy to patients on?...</p>
 <hr/>
-<h5><a href='https://nmhc.referrals.selectminds.com/jobs/speech-therapist-orthopedic-rehab-acute-inpatient-casual-weekends-32889'>Speech Therapist - Orthopedic Rehab Acute Inpatient, Casual, Weekends - Northwestern Medicine Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nmhc.referrals.selectminds.com/jobs/speech-therapist-orthopedic-rehab-acute-inpatient-casual-weekends-32889'>Speech Therapist - Orthopedic Rehab Acute Inpatient, Casual, Weekends - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -449,11 +453,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Montgomery</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4463532002'>Job Application for Speech Language Pathologist (SLP) - Per Diem at BAYADA Home Health Care</a></h5> 
-<p><span class="badge badge-light">Hagerstown, MD</span></p>
-<p>Posted on: 2019-10-05</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
